# jakubtoth.sk

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  manage.py  package-lock.json  package.json  pyproject.toml  requirements.sh  webpack.config.js
.github/workflows/: build.yml
apps/api/: errors.py  response.py  serializers.py
apps/api/views/: status.py
apps/core/: admin.py  models.py
apps/core/migrations/: 0001_initial.py
apps/portal/: urls.py
apps/portal/assets/: app.js
apps/portal/assets/sass/: _basics.scss  _contact.scss  _detail.scss  _grid.scss  _index.scss  _info.scss  _modals.scss  _projects.scss  _variables.scss  style.scss
apps/portal/assets/scripts/: navigation.js
apps/portal/views/: portal.py
conf/: entrypoint.sh  supervisor.conf
jakubtoth_sk/: asgi.py  settings.py  urls.py  wsgi.py
templates/portal/: index.html
