[tool.poetry]
name = "jakubtoth"
version = "0.1.0"
description = "Jakub Toth personal portfolio"
authors = ["Jakub Dubec <hello@jakubdubec.me>"]

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1"
python-dotenv = "^1.0"
argon2-cffi = "^23.1.0"
sentry-sdk = "^2.0"
psycopg = {version = "^3.1", extras = ["c"]}
Pillow = "^11"
django-nested-admin = "^4.1.1"
django-editorjs2 = "^0.3.8"
pydantic = "^2.10.6"

[tool.poetry.group.docker.dependencies]
gunicorn = "^23.0.0"
wheel = "*"

[tool.poetry.group.dev.dependencies]
black = "^24.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9"

[tool.black]
line-length = 119
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.github
  | .venv
  | data
  | logs
  | media
  | static
  | conf
  | node_modules
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.masonry.api"
